snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.pom.md5
7f92a4f85c366ee4b5ff476b24fe8177